# LSP

./: .gitignore  .woodpecker.yml  CMakeLists.txt  README.md
include/lsp/: json.hpp  lsp_internal.hpp  lsp_server.hpp
src/: analysis.cpp  features.cpp  json.cpp  lsp_server.cpp  main.cpp  transport.cpp  workspace.cpp
